--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,6 +27,25 @@
       "controlled-chaos": "Controlled Chaos"
     }
   },
+  "setupBot": {
+    "title": "Setup DiNO",
+    "prepareGame": "Prepare the game as usual for {totalPlayerCount} players.",
+    "botPlayerPieces": "DiNO receives all player pieces of a color, the starting money, 4 fences and a Personal Island Board.",
+    "botDNACards": "DiNO receives 5 DNA cards, 1 Mutant reference card, and 3 Manipulation cards",
+    "botDNACardsControlledChaos": "DiNO receives 4 DNA cards, 1 eDNA card, 1 Mutant reference card, and 3 Manipulation cards.",
+    "botDNACardArrangement": "Place DiNO’s DNA cards face up and all Manipulation Cards face down on stacks next to DiNO’s Island Board as indicated.",
+    "botTurnOrder": "DiNO always starts last in turn order on the first round of the game."
+  },
+  "dnaCollectionArrangement": {
+    "title": "DINO DNA Collection and Arrangement",
+    "setCollection": "During the game DINO will focus on collecting DNA sets of up to 4 different species. As part of DINO’s setup, create the preferred species’ stacks beside DINO’s Island Board. Unique species will form their own column while duplicates will be stacked as they are drawn.",
+    "cardOrder": "Start with the first two DNA cards/species (1st & 2nd species) on the right, proceed to the left with the eDNA card/species (3rd species) and a possible 4th species to the left. On the leftmost column, place the Mutant reference card. The Preferred Species 3 column is only specific to eDNA during setup.",
+    "noDuplicates": "If there were no duplicates the 5th card will be placed below the Mutant reference card to form a stack of spare DNA.",
+    "example": {
+      "title": "Example",
+      "description": "DINO received five random cards plus the Mutant reference card during setup. Because DINO received two Ankylosaurus, they are grouped together. The DNA-species are placed in the order of reception from right to left. Place the Mutant reference card in the far left space. The Megalodon is placed on the 3rd spot from the right, because it was drawn from the eDNA deck."
+    }
+  },
   "difficultyLevel": {
     "1": "Very Easy",
     "2": "Easy", 
