--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,9 +24,11 @@
     },
     "modules": {
       "title": "Modules and Expansions",
-      "dino-advanced": "DiNO Advanced Mode",
       "controlled-chaos": "Controlled Chaos Expansion",
-      "controlled-chaos-dinosaur-elites": "Controlled Chaos Expansion: Dinosaur Elites Module"
+      "controlled-chaos-chaos-theory": "Controlled Chaos Expansion: Chaos Theory Module",
+      "controlled-chaos-dinosaur-elites": "Controlled Chaos Expansion: Dinosaur Elites Module",
+      "new-arrivals-mini-expansion": "New Arrivals Mini Expansion",
+      "dino-advanced": "DiNO Advanced Mode"
     }
   },
   "setupBot": {
