selective collapse for location rules

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -67,6 +67,9 @@
     "outOfLocations": "Out of further locations, go back.",
     "back": "Back"
   },
+  "locationRulesCollapse": {
+    "showRules": "Show Rules"
+  },
   "roundUpkeepPhase": {
     "title": "Upkeep Phase",
     "feedCarnivores": "Feed all carnivores (must feed carnivores as much as possible)",
