--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -125,16 +125,44 @@
       }
     },
     "facilitiesHabitats": {
-      "title": "Facilities and Habitats"
+      "title": "Facilities & Habitats",
+      "intro": "When DINO takes actions to create new dinosaurs or place facilities it will do so based on the grid system displayed to the right and always start with the lowest position in a column.",
+      "newDinosaurs": "New Dinosaurs are placed starting in the bottom right of DINO’s player board. Habitats are immediately built as the new dinosaur is placed by placing the minimal number of fences required to satisfy the dinosaurs habitat requirement. If a dinosaur of an existing species is created, enlarge the existing habitat by exactly enough space to accommodate the new dinosaur. Habitats may expand into other columns of the grid once all space in the right most column is filled following the arrows listed in the diagram.",
+      "facilities": "Park Facilities are built starting in the bottom middle column. If there is no further room in the center column, DINO gains the VP amount listed on the unplaceable facility and returns the tile to the box.",
+      "largeFacilities": "Large Park Facilities (including Aquatic Habitats) are built starting in the lower left column. Large Park Facilities are placed so that only half of the facility takes up a park space. If there is no further room in the left hand column, DINO instead gains the VP amount listed on the unplaceable facility and returns the tile to the box.",
+      "commercialFacilities": "Commercial Facilities are built in the column to the left of the visitor center and may expand into the right most column by first expanding up. If there is no further room, DINO instead gains the VP amount listed on the unplaceable facility and returns the tile to the box.",
+      "largeCommercialFacilities": "Large Commercial Facilities are built in the column above the Visitor Center. Large Park Facilities are placed so that only half of the facility takes up a commercial space. If there is no further room, DINO instead gains the VP amount listed on the unplaceable facility and returns the tile to the box."
     },
-    "dnaCollectionArrangement": {
-      "title": "DINO DNA Collection and Arrangement",
-      "setCollection": "During the game DINO will focus on collecting DNA sets of up to 4 different species. As part of DINO’s setup, create the preferred species’ stacks beside DINO’s Island Board. Unique species will form their own column while duplicates will be stacked as they are drawn.",
-      "cardOrder": "Start with the first two DNA cards/species (1st & 2nd species) on the right, proceed to the left with the eDNA card/species (3rd species) and a possible 4th species to the left. On the leftmost column, place the Mutant reference card. The Preferred Species 3 column is only specific to eDNA during setup.",
-      "noDuplicates": "If there were no duplicates the 5th card will be placed below the Mutant reference card to form a stack of spare DNA.",
-      "example": {
-        "title": "Example",
-        "description": "DINO received five random cards plus the Mutant reference card during setup. Because DINO received two Ankylosaurus, they are grouped together. The DNA-species are placed in the order of reception from right to left. Place the Mutant reference card in the far left space. The Megalodon is placed on the 3rd spot from the right, because it was drawn from the eDNA deck."
+    "dnaCollection": {
+      "title": "DNA Collection",
+      "arrangement": {
+        "title": "Collection and Arrangement",
+        "setCollection": "During the game DINO will focus on collecting DNA sets of up to 4 different species. As part of DINO’s setup, create the preferred species’ stacks beside DINO’s Island Board. Unique species will form their own column while duplicates will be stacked as they are drawn.",
+        "cardOrder": "Start with the first two DNA cards/species (1st & 2nd species) on the right, proceed to the left with the eDNA card/species (3rd species) and a possible 4th species to the left. On the leftmost column, place the Mutant reference card. The Preferred Species 3 column is only specific to eDNA during setup.",
+        "noDuplicates": "If there were no duplicates the 5th card will be placed below the Mutant reference card to form a stack of spare DNA.",
+        "example": {
+          "title": "Example",
+          "description": "DINO received five random cards plus the Mutant reference card during setup. Because DINO received two Ankylosaurus, they are grouped together. The DNA-species are placed in the order of reception from right to left. Place the Mutant reference card in the far left space. The Megalodon is placed on the 3rd spot from the right, because it was drawn from the eDNA deck."
+        }
+      },
+      "acquiring": {
+        "title": "Acquiring New DNA",
+        "intro": "Whenever DINO receives new (e)DNA 1 of 3 outcomes will occur based on if the card matches an existing species.",
+        "matchExisting": "The newly drawn DNA card matches an existing preferred species.",
+        "matchExistingResult": "Result: Add the card to the existing preferred species stack.",
+        "emptyColumn": "The newly drawn DNA card does not match an existing preferred species but 1 of the 4 columns is empty.",
+        "emptyColumnResult": "Result: Form a new preferred species by placing the card in the empty column.",
+        "noEmptyColumn": "The newly drawn DNA card does not match an existing preferred species and there are no empty columns.",
+        "noEmptyColumnResult": "Result: Place the card in the spare DNA stack.",
+        "noHandLimit": "The hand limit of 10 (e)DNA cards does not apply to DINO and it may keep any number of cards in any of its stacks of cards."
+      },
+      "refresh": {
+        "title": "Refresh Preferred Species After Dinosaur Creation",
+        "intro": "If DINO created a dinosaur, check if the Spare Stack contains cards and use them to replenish an empty preferred species column. All cards of the Spare Stack are checked, and the species is picked where the least number of cards is missing to complete a set. Ties are broken in favor of:",
+        "hightestDNA": "Species with the highest DNA requirement.",
+        "notInPark": "Species that is not part of DINO’s park.",
+        "topmost": "Topmost species.",
+        "newStack": "Pick all matching cards of the determined species and create the new stack."
       }
     },
     "breakingNews": {
